# scrobble

./: .gitignore  CHANGES  MANIFEST.in  README.md  pyproject.toml
.github/: workflows
.github/workflows/: test.yml
src/scrobble/: app.py  barcode_scanner.py  lastfm.py  musicbrainz.py  pushover.py  utils.py
src/scrobble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scrobble/models/: cd.py  track.py
tests/: test__barcode_scanner.py  test__cd.py  test__lastfm.py  test__pushover.py  test__utils.py
tests/resources/: scrobble_bad_config.toml  scrobble_complete_valid.toml
