[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrobble"
version = "0.2.1"
description = "Scrobble CDs to your last.fm account."
readme = "README.md"
authors = [{ name = "Sherif Soliman", email = "hi@sherif.io" }]
license = { file = "LICENSE" }
keywords = ["last.fm", "scrobble", "cd", "music"]
requires-python = ">=3.11"
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "musicbrainzngs",
    "parsedatetime",
    "python-dateutil",
    "pylast",
    "rich",
    "typer[all]",
    "opencv-python"
]

[project.optional-dependencies]

test = [
    "scrobble",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/sheriferson/scrobble"

[project.scripts]
scrobble = "scrobble.app:main"
